migrated to bridged network

--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -1,8 +1,42 @@
 # Use the nl80211 driver with the brcmfmac driver
 driver=nl80211
 
-# Use the 2.4GHz band
-hw_mode=g
+# Operation mode (a = IEEE 802.11a (5 GHz), b = IEEE 802.11b (2.4 GHz),
+# g = IEEE 802.11g (2.4 GHz), ad = IEEE 802.11ad (60 GHz); a/g options are used
+# with IEEE 802.11n (HT), too, to specify band). For IEEE 802.11ac (VHT), this
+# needs to be set to hw_mode=a. For IEEE 802.11ax (HE) on 6 GHz this needs
+# to be set to hw_mode=a. When using ACS (see channel parameter), a
+# special value "any" can be used to indicate that any support band can be used.
+# This special case is currently supported only with drivers with which
+# offloaded ACS is used.
+# Default: IEEE 802.11b
+hw_mode=a
+
+# Channel number (IEEE 802.11)
+# (default: 0, i.e., not set)
+# Please note that some drivers do not use this value from hostapd and the
+# channel will need to be configured separately with iwconfig.
+#
+# If CONFIG_ACS build option is enabled, the channel can be selected
+# automatically at run time by setting channel=acs_survey or channel=0, both of
+# which will enable the ACS survey based algorithm.
+channel=acs_survey
+
+# Enable IEEE 802.11h. This enables radar detection and DFS support if
+# available. DFS support is required on outdoor 5 GHz channels in most countries
+# of the world. This can be used only with ieee80211d=1.
+# (default: 0 = disabled)
+ieee80211h=1
+
+# Channel number (IEEE 802.11)
+# (default: 0, i.e., not set)
+# Please note that some drivers do not use this value from hostapd and the
+# channel will need to be configured separately with iwconfig.
+#
+# If CONFIG_ACS build option is enabled, the channel can be selected
+# automatically at run time by setting channel=acs_survey or channel=0, both of
+# which will enable the ACS survey based algorithm.
+#channel=0
 
 # Enable 802.11n
 ieee80211n=1
@@ -11,7 +45,16 @@ ieee80211n=1
 wmm_enabled=1
 
 # Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
+ht_capab=[HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][DSSS_CCK-40][TX-STBC][RX-STBC1]
+
+# ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
+# 0 = disabled (default)
+# 1 = enabled
+# Note: You will also need to enable WMM for full VHT functionality.
+# Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
+ieee80211ac=1
+
+vht_capab=[HTC-VHT][RXLDPC][TX-STBC-2BY1][SU-BEAMFORMEE]
 
 # Bit field: 1=wpa, 2=wep, 3=both
 auth_algs=1
@@ -20,7 +63,12 @@ auth_algs=1
 wpa=2
 
 # Use a pre-shared key
-wpa_key_mgmt=WPA-PSK
+# WPA2
+# wpa_key_mgmt=WPA-PSK
+
+# WPA3-Personal-only mode: ieee80211w=2 and wpa_key_mgmt=SAE
+wpa_key_mgmt=SAE
+ieee80211w=2
 
 # Use AES, instead of TKIP
 rsn_pairwise=CCMP
