--- a/hassio-access-point/Dockerfile
+++ b/hassio-access-point/Dockerfile
@@ -1,18 +1,15 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-MAINTAINER Matt Longman <git@mattlongman.com>
-
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 ENV LANG C.UTF-8
 
 RUN apk update && \
-apk add --no-cache bash iw hostapd networkmanager networkmanager-cli net-tools sudo dnsmasq iptables && \
+apk add --no-cache bash iw hostapd bridge-utils networkmanager networkmanager-cli net-tools sudo iptables && \
 rm -rf /var/cache/apk/*
 
 COPY hostapd.conf /
-COPY dnsmasq.conf /
 
 COPY run.sh /
 RUN chmod a+x /run.sh
