--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -22,6 +22,20 @@ hw_mode=a
 # which will enable the ACS survey based algorithm.
 channel=acs_survey
 
+# Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+# Set as needed to indicate country in which device is operating.
+# This can limit available channels and transmit power.
+# These two octets are used as the first two octets of the Country String
+# (dot11CountryString)
+country_code=DE
+
+# Enable IEEE 802.11d. This advertises the country_code and the set of allowed
+# channels and transmit power levels based on the regulatory limits. The
+# country_code setting must be configured with the correct country for
+# IEEE 802.11d functions.
+# (default: 0 = disabled)
+ieee80211d=1
+
 # Enable IEEE 802.11h. This enables radar detection and DFS support if
 # available. DFS support is required on outdoor 5 GHz channels in most countries
 # of the world. This can be used only with ieee80211d=1.
