--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -42,6 +42,21 @@ ieee80211h=1
 # which will enable the ACS survey based algorithm.
 #channel=0
 
+# Startkanal eines 80 MHz-Blocks, der Kanal 106 (Center Frequency) entspricht.
+channel=100
+# Setzt die Kanalbreite auf 80 MHz.
+vht_oper_chwidth=1
+# Setzt die Center Frequency auf Kanal 106.
+vht_oper_centr_freq_seg0_idx=106
+# Aktiviert DFS-Unterstützung.
+ieee80211h=1
+#  Notwendig für richtige Kanal- und Leistungsfreigabe gemäß EU.
+country_code=DE
+# Aktiviert 802.11ac (für 80 MHz nötig).
+ieee80211ac=1
+# Aktiviert die Ankündigung regionaler Kanäle (hilfreich für Clients).
+ieee80211d=1
+
 # Enable 802.11n
 ieee80211n=1
 
