--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -64,7 +64,7 @@ ieee80211n=1
 wmm_enabled=1
 
 # Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][DSSS_CCK-40][TX-STBC][RX-STBC1]
+ht_capab=[HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][TX-STBC][RX-STBC1]
 
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
 # 0 = disabled (default)
@@ -73,7 +73,7 @@ ht_capab=[HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][DSSS_CCK-40][TX-STBC][RX
 # Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
 ieee80211ac=1
 
-vht_capab=[HTC-VHT][RXLDPC][TX-STBC-2BY1][SU-BEAMFORMEE]
+vht_capab=[RXLDPC][TX-STBC-2BY1][SU-BEAMFORMEE]
 
 # Bit field: 1=wpa, 2=wep, 3=both
 auth_algs=1
