--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -42,12 +42,10 @@ ieee80211h=1
 # which will enable the ACS survey based algorithm.
 #channel=0
 
-# Startkanal eines 80 MHz-Blocks, der Kanal 106 (Center Frequency) entspricht.
+# Startkanal eines 20/40 MHz-Blocks
 channel=100
-# Setzt die Kanalbreite auf 80 MHz.
-vht_oper_chwidth=1
-# Setzt die Center Frequency auf Kanal 106.
-vht_oper_centr_freq_seg0_idx=106
+# Setzt die Kanalbreite auf 40 MHz.
+vht_oper_chwidth=0
 # Aktiviert DFS-Unterstützung.
 ieee80211h=1
 #  Notwendig für richtige Kanal- und Leistungsfreigabe gemäß EU.
