--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -62,7 +62,7 @@ ieee80211n=1
 wmm_enabled=1
 
 # Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][TX-STBC][RX-STBC1]
+ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][LDPC][TX-STBC][RX-STBC1]
 
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
 # 0 = disabled (default)
