--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -17,7 +17,7 @@ hw_mode=a
 # This can limit available channels and transmit power.
 # These two octets are used as the first two octets of the Country String
 # (dot11CountryString)
-country_code=DE
+country_code=US
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
@@ -43,17 +43,9 @@ ieee80211h=1
 #channel=0
 
 # Startkanal eines 20/40 MHz-Blocks
-channel=100
+channel=60
 # Setzt die Kanalbreite auf 40 MHz.
 vht_oper_chwidth=0
-# Aktiviert DFS-Unterstützung.
-ieee80211h=1
-#  Notwendig für richtige Kanal- und Leistungsfreigabe gemäß EU.
-country_code=DE
-# Aktiviert 802.11ac (für 80 MHz nötig).
-ieee80211ac=1
-# Aktiviert die Ankündigung regionaler Kanäle (hilfreich für Clients).
-ieee80211d=1
 
 # Enable 802.11n
 ieee80211n=1
