--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -17,7 +17,7 @@ hw_mode=a
 # This can limit available channels and transmit power.
 # These two octets are used as the first two octets of the Country String
 # (dot11CountryString)
-country_code=US
+country_code=DE
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
@@ -42,10 +42,9 @@ ieee80211h=1
 # which will enable the ACS survey based algorithm.
 #channel=0
 
-# Startkanal eines 20/40 MHz-Blocks
-channel=60
-# Setzt die Kanalbreite auf 40 MHz.
-vht_oper_chwidth=0
+channel=149
+vht_oper_chwidth=1
+vht_oper_centr_freq_seg0_idx=155
 
 # Enable 802.11n
 ieee80211n=1
