--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -30,7 +30,7 @@ ieee80211d=1
 # available. DFS support is required on outdoor 5 GHz channels in most countries
 # of the world. This can be used only with ieee80211d=1.
 # (default: 0 = disabled)
-ieee80211h=1
+ieee80211h=0
 
 # Channel number (IEEE 802.11)
 # (default: 0, i.e., not set)
@@ -40,11 +40,9 @@ ieee80211h=1
 # If CONFIG_ACS build option is enabled, the channel can be selected
 # automatically at run time by setting channel=acs_survey or channel=0, both of
 # which will enable the ACS survey based algorithm.
-#channel=0
-
 channel=36
-vht_oper_chwidth=1
-vht_oper_centr_freq_seg0_idx=42
+vht_oper_chwidth=0
+#vht_oper_centr_freq_seg0_idx=42
 
 # Enable 802.11n
 ieee80211n=1
