--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -17,20 +17,20 @@ hw_mode=a
 # This can limit available channels and transmit power.
 # These two octets are used as the first two octets of the Country String
 # (dot11CountryString)
-country_code=DE
+#country_code=DE
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
 # country_code setting must be configured with the correct country for
 # IEEE 802.11d functions.
 # (default: 0 = disabled)
-ieee80211d=1
+#ieee80211d=1
 
 # Enable IEEE 802.11h. This enables radar detection and DFS support if
 # available. DFS support is required on outdoor 5 GHz channels in most countries
 # of the world. This can be used only with ieee80211d=1.
 # (default: 0 = disabled)
-ieee80211h=0
+#ieee80211h=0
 
 # Channel number (IEEE 802.11)
 # (default: 0, i.e., not set)
@@ -41,7 +41,7 @@ ieee80211h=0
 # automatically at run time by setting channel=acs_survey or channel=0, both of
 # which will enable the ACS survey based algorithm.
 channel=36
-vht_oper_chwidth=0
+#vht_oper_chwidth=0
 #vht_oper_centr_freq_seg0_idx=42
 
 # Enable 802.11n
