--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -17,7 +17,7 @@ hw_mode=a
 # This can limit available channels and transmit power.
 # These two octets are used as the first two octets of the Country String
 # (dot11CountryString)
-#country_code=DE
+#country_code=AN
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
@@ -41,8 +41,8 @@ hw_mode=a
 # automatically at run time by setting channel=acs_survey or channel=0, both of
 # which will enable the ACS survey based algorithm.
 channel=36
-#vht_oper_chwidth=0
-#vht_oper_centr_freq_seg0_idx=42
+vht_oper_chwidth=1
+vht_oper_centr_freq_seg0_idx=42
 
 # Enable 802.11n
 ieee80211n=1
