--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -17,7 +17,7 @@ hw_mode=a
 # This can limit available channels and transmit power.
 # These two octets are used as the first two octets of the Country String
 # (dot11CountryString)
-#country_code=AN
+country_code=AF
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
